syntax = "proto3";
package pacman;

option go_package = "operator/grpc";
option java_multiple_files = true;
option java_generic_services = true;

service LobbyService {
  rpc JoinLobby(JoinRequest) returns (JoinResponse);
  rpc LeaveLobby(LeaveRequest) returns (LeaveResponse);
  rpc StreamLobby(stream LobbyUpdate) returns (stream PlayerStatus);
  rpc StreamScores(stream ScoreUpdate) returns (stream ScoreUpdate);
  rpc StartGame(StartGameRequest) returns (StartGameResponse);
  rpc StreamGameStart(stream GameStartUpdate) returns (stream GameStartNotification);
  rpc GetTopScores(TopScoresRequest) returns (TopScoresResponse);
  rpc InsertScore(InsertScoreRequest) returns (InsertScoreResponse);
}

message ScoreUpdate {
  string player_name = 1;
  int32 score = 2;
}

message JoinRequest {
  string playerName = 1;
}

message JoinResponse {
  string message = 1;
  repeated string players = 2; // List of current players
}

message LeaveRequest {
  string playerName = 1;
}

message LeaveResponse {
  string message = 1;
}

message LobbyUpdate {
  string playerName = 1;
  bool isJoining = 2; // True if joining, false if leaving
}

message PlayerStatus {
  string playerName = 1;
  int32 currentPlayers = 2; // Current number of players in the lobby
}

message StartGameRequest {
  string playerName = 1; // The name of the player who is starting the game
}

message StartGameResponse {
  string message = 1;
}

message GameStartUpdate {
  string playerName = 1; // Indicates if the game has started
}

message GameStartNotification {
  string message = 1; // Notification message
}

message ScoreHistory {
  string playerName = 1; // Name of the player
  int32 score = 2;       // Player's score
}

// New request message for getting top scores
message TopScoresRequest {}

// New response message for top scores
message TopScoresResponse {
  repeated ScoreHistory scores = 1; // List of top scores
}

// The request message for inserting a score
message InsertScoreRequest {
  string playerName = 1;
  int32 score = 2;
}

// The response message for inserting a score
message InsertScoreResponse {
  bool success = 1;
  string message = 2; // Optional message to provide feedback
}
